# RoR

./: .gitignore  README.md
ollama_mcp/: Cargo.toml
ollama_mcp/src/: lib.rs  main.rs
ollama_mcp/src/utils/: ollama.rs
rag_gemini/: Cargo.toml
rag_gemini/src/: lib.rs  main.rs
rag_gemini/src/utils/: gemini.rs
